调整标题和样式

--- a/index.html
+++ b/index.html
@@ -3,10 +3,17 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
+    <style>
+        a{
+            text-decoration:none;
+            font-size: 20px;
+            color: #008000;
+        }
+    </style>
 </head>
 <body>
 <ul>
-    <li><a href="emoji/index.html">Emoji</a></li>
+    <li><a href="emoji/index.html" target="_blank">南京 LUG 2014.10 聚会 - 跨终端Emoji-slides</a></li>
 </ul>
 </body>
 </html>
