--- a/emoji/index.html
+++ b/emoji/index.html
@@ -17,7 +17,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-	<title>HTML Slide Presentation Framework</title>
+	<title>跨终端Emoji</title>
 	<meta name="description" content="HTML Slide Presentation framework">
 	<meta name="author" content="Brian Cavalier">
 
