--- a/emoji/index.html
+++ b/emoji/index.html
@@ -29,6 +29,14 @@
 		.presentation-loading * {
 			visibility: hidden;
 		}
+        a{
+            text-decoration:none;
+            font-size: 20px;
+            color: greenyellow;
+        }
+        h2 {
+            text-align: center
+        }
 	</style>
 
 	<script data-curl-run="app/run.js" src="bower_components/curl/src/curl.js"></script>
