添加一些内容

--- a/emoji/slides/slides.html
+++ b/emoji/slides/slides.html
@@ -25,6 +25,20 @@
 
 <hr>
 <br>
+<h3>应用：</h3>
+<ul>
+    <li>
+        Emojli: the emoji-only messenger
+        <img style="width: 300px;float: right" src="imgs/emojli.jpeg">
+    </li>
+    <li>
+        <a href="http://www.emojione.com/" target="_blank">Emojione项目</a>
+    </li>
+    <li><a href="http://baoz.me/" target="_blank">孢子社区</a></li>
+
+</ul>
+<hr>
+<br>
 <br>
 <br>
 <h2>如何支持？</h2>
@@ -42,8 +56,16 @@
 <h2>第一阶段:ios5-6时代</h2>
 
 <hr>
-<h3>问题来了：</h3>
-<p>ios7和Mac OSX 10.9发布后,他们输入的部分emoji在浏览器上出现<img src="imgs/error.png"></p>
+<h2>现在问题来了!</h2>
+
+<hr>
+<h2>不是挖掘机技术哪家强！</h2>
+
+<hr>
+<h3>症状：</h3>
+<p>
+    ios7和Mac OSX 10.9发布后,它们输入的部分emoji在浏览器上出现<img src="imgs/error.png">
+</p>
 
 <hr>
 <h3>问题原因：</h3>
@@ -57,7 +79,7 @@
 <h2>第二阶段:ios7和Mac OSX 10.9发布后</h2>
 
 <hr>
-<h3>问题来了：</h3>
+<h3>问题又来了：</h3>
 <p>
     <b>孢子新的移动平台采用Titanium，titanium上对utf8进行解码，如果遇到D800-DFFF范围unicode字符，会出现解码错误，导致乱码产生。</b>
     <img style="width: 275px; float: right" src="imgs/luanma.jpg">
@@ -71,7 +93,8 @@
     。在Titanium上utf8解码，把第一个引导位，当做了合法字符去解析，导致解码错误产生乱码。在个别安卓手机中，录入emoji表情，回删表情，
     只能删除表情的一部分字节，会留下第一位引导字节位，导致非法的引导位进入数据库，最终出现在Ti客户端上导致乱码产生。
 </p>
-
+<br>
+参考：<a href="http://zh.wikipedia.org/zh/UTF-8" target="_blank">UTF-8 WIKI</a>
 
 <hr>
 <br>
@@ -81,7 +104,7 @@
 
 
 <hr>
-<h3>问题来了：</h3>
+<h3>问题咋又来了：</h3>
 <p>
     <b>Android4.4.2和win8.1发布了，他们开始原生支持emoji显示，并且Mac下的safari和Firefox也都支持原生显示，此前的方案无法原生支持</b>
     <br>
@@ -103,7 +126,7 @@
 
 
 <hr>
-<h3>迟早会来的问题：</h3>
+<h3>定时炸弹：</h3>
 <p>
     多版本数量不等
     <br><br>
@@ -121,6 +144,10 @@
     <li>emoji越来越标准化</li>
 </ul>
 
+<hr>
+<h3>最后一个问题：</h3>
+<br>
+<p>Emoji技术哪家强？</p>
 
 <hr>
 <br>
