--- a/emoji/slides/slides.html
+++ b/emoji/slides/slides.html
@@ -21,6 +21,11 @@
 <br>
 <br>
 <img style="float: right" src="imgs/e.png">
+<br>
+<br>
+<br>
+<br>
+<a style="float: right" href="http://zh.wikipedia.org/wiki/%E7%B9%AA%E6%96%87%E5%AD%97" target="_blank">Emoji WIKI</a>
 
 
 <hr>
