继续完善改版

--- a/emoji/index.html
+++ b/emoji/index.html
@@ -37,6 +37,10 @@
         h2 {
             text-align: center
         }
+        b{
+            line-height: 1.5;
+            font-family: sans-serif;
+        }
 	</style>
 
 	<script data-curl-run="app/run.js" src="bower_components/curl/src/curl.js"></script>
