补充一些内容

--- a/emoji/slides/slides.html
+++ b/emoji/slides/slides.html
@@ -4,6 +4,8 @@
     <h4>孢子社区 - 庄恒飞</h4>
 
     <div>
+        <b style="right:100px;top:20px;width: 100px;position:absolute;font-size: 20px">新浪微博：<img style="width: 150px" src="imgs/weibo.png"></b>
+        <b style="right:100px;top:210px;width: 100px;position:absolute;font-size: 20px">Github：<img style="width: 150px" src="imgs/github.png"></b>
         <br>
         <br>
         <br>
@@ -248,7 +250,7 @@
             <li>全局字体：‘Apple Color Emoji’</li>
             <li>ios1-4：自定义编码转成softbank编码</li>
             <li>ios5-6：自定义转换成ios5编码</li>
-            <li>ios7：自定义转换成ios5编码</li>
+            <li>ios7：自定义转换成ios7编码</li>
             <li>Android和桌面：自定义转换成图片</li>
         </ul>
     </li>
@@ -312,7 +314,7 @@
         <br>
         <br>
         <ul style="font-size: 25px">
-            <li>全局字体：‘Apple Color Emoji’</li>
+            <li>全局字体：‘Apple Color Emoji’,‘Segoe UI Emoji’</li>
             <li>判断设备逻辑改成：颜色检测算法，自动检测出设备是否原生支持emoji显示和支持的版本</li>
             <li>根据自检测结果，转换相应结果</li>
         </ul>
