添加fibjs同步实践slide

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
 <ul>
     <li><a href="emoji/index.html" target="_blank">南京 LUG 2014.10 聚会 - 跨终端Emoji-slides</a></li>
+    <li><a href="pdfs/fibjs同步大法实践.pdf" target="_blank">上海 2014年12月20日 NodeParty - fibjs同步大法实践-slides</a></li>
 </ul>
 </body>
 </html>
