添加前端交流会ppt

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <ul>
     <li><a href="emoji/index.html" target="_blank">南京 LUG 2014.10 聚会 - 跨终端Emoji-slides</a></li>
     <li><a href="pdfs/fibjs同步大法实践.pdf" target="_blank">上海 2014年12月20日 NodeParty - fibjs同步大法实践-slides</a></li>
+    <li><a href="pdfs/上海JS前端交流会2014.12月份.pdf" target="_blank">【上海JS前端交流会】2014.12月份</a></li>
 </ul>
 </body>
 </html>
