--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <li><a href="pdfs/上海JS前端交流会2014.12月份.pdf" target="_blank">【上海JS前端交流会】2014.12月份</a></li>
     <li><a href="http://www.stuq.org/ppt/show/54/81f1c92a5692f98590617d7d6ec2038e" target="_blank">QCon全球软件开发大会（北京站）2015 - 孢子技术团队全栈最佳实践</a></li>
     <li><a href="pdfs/ShenJS_fibjs.pdf" target="_blank">【深JS】fibjs原理以及实践</a></li>
+    <li><a href="pdfs/Egg.js 在阿里巴巴集团的的实践运用.pdf" target="_blank"> 杭州 2017年8月19日 NodeParty - 从刀耕火种，铁犁牛耕，迈向大规模机械化生产 - Egg.js 在阿里巴巴集团的实践运用</a></li>
 </ul>
 </body>
 </html>
