--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <li><a href="emoji/index.html" target="_blank">南京 LUG 2014.10 聚会 - 跨终端Emoji-slides</a></li>
     <li><a href="pdfs/fibjs同步大法实践.pdf" target="_blank">上海 2014年12月20日 NodeParty - fibjs同步大法实践-slides</a></li>
     <li><a href="pdfs/上海JS前端交流会2014.12月份.pdf" target="_blank">【上海JS前端交流会】2014.12月份</a></li>
-    <li><a href="http://www.stuq.org/ppt/show/54/81f1c92a5692f98590617d7d6ec2038e" target="_blank">QCon全球软件开发大会（北京站）2015 - 孢子技术团队全栈最佳实践</a></li>
+    <li><a href="pdfs/QCon北京2015_4_21_全栈开发.pdf" target="_blank">QCon全球软件开发大会（北京站）2015 - 孢子技术团队全栈最佳实践</a></li>
     <li><a href="pdfs/ShenJS_fibjs.pdf" target="_blank">【深JS】fibjs原理以及实践</a></li>
     <li><a href="pdfs/Egg.js 在阿里巴巴集团的的实践运用.pdf" target="_blank"> 杭州 2017年8月19日 NodeParty - 从刀耕火种，铁犁牛耕，迈向大规模机械化生产 - Egg.js 在阿里巴巴集团的实践运用</a></li>
 </ul>
