--- a/index.html
+++ b/index.html
@@ -3,22 +3,16 @@
 <head lang="en">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; minimum-scale=1.0; user-scalable=no;" />
-    <title></title>
-    <style>
-        a{
-            text-decoration:none;
-            font-size: 20px;
-            color: #008000;
-        }
-    </style>
+    <title>Speaker - Hengfei Zhuang</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<ul>
-    <li><a href="emoji/index.html" target="_blank">南京 LUG 2014.10 聚会 - 跨终端Emoji-slides</a></li>
-    <li><a href="pdfs/fibjs同步大法实践.pdf" target="_blank">上海 2014年12月20日 NodeParty - fibjs同步大法实践-slides</a></li>
-    <li><a href="pdfs/上海JS前端交流会2014.12月份.pdf" target="_blank">【上海JS前端交流会】2014.12月份</a></li>
-    <li><a href="http://www.stuq.org/ppt/show/54/81f1c92a5692f98590617d7d6ec2038e" target="_blank">QCon全球软件开发大会（北京站）2015 - 孢子技术团队全栈最佳实践</a></li>
-    <li><a href="pdfs/ShenJS_fibjs.pdf" target="_blank">【深JS】fibjs原理以及实践</a></li>
-</ul>
+    <h1>Speakers</h1>
+    <h2>by Hengfei Zhuang</h2>
+    <ul id="slides-block">
+    </ul>
+
+    <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
