--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head lang="en">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; minimum-scale=1.0; user-scalable=no;" />
-    <title>Speaker - Hengfei Zhuang</title>
+    <title>Speaker - Hengfei Zhuang(ngot)</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <h1>Speakers</h1>
-    <h2>by Hengfei Zhuang</h2>
+    <h2>by Hengfei Zhuang(ngot)</h2>
     <ul id="slides-block">
     </ul>
 
