--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
 </head>
 <body>
     <h1>Speakers</h1>
-    <h2>by Hengfei Zhuang(ngot)</h2>
-    <ul id="slides-block">
-    </ul>
+    <h2>by Hengfei Zhuang(ngot)
+        <a href="https://github.com/ngot/" class="github social-icon"></a>
+    </h2>
 
-    <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+    <ul id="slides-block" class="slides-block">
+    </ul>
+    
     <script src="index.js"></script>
 </body>
 </html>
