--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head lang="en">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; minimum-scale=1.0; user-scalable=no;" />
-    <title>Speaker - Hengfei Zhuang(ngot)</title>
+    <title>Speakings - Hengfei Zhuang(ngot)</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <h1>Speakers</h1>
+    <h1>Speakings</h1>
     <h2>by Hengfei Zhuang(ngot)
         <a href="https://github.com/ngot/" class="github social-icon"></a>
     </h2>
