fix some legacy link and stuff

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Speakings</h1>
-    <h2>by Hengfei Zhuang(ngot)
+    <h2>by Henry Zhuang(ngot)
         <a href="https://github.com/ngot/" class="github social-icon"></a>
     </h2>
 
