--- a/index.html
+++ b/index.html
@@ -16,5 +16,14 @@
     </ul>
     
     <script src="index.js"></script>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-132835895-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'UA-132835895-1');
+    </script>
 </body>
 </html>
